--- a/_themes/marx/sass/marx.scss
+++ b/_themes/marx/sass/marx.scss
@@ -7,12 +7,15 @@
 // ==========================
 @import "config/manifest.scss";
 @import "../bower_components/bourbon/dist/bourbon";
+@import "../bower_components/uikit/scss/uikit-mixins.scss";
 @import "mixins";
 
 // =================
 // BASE RULES
 // =================
 @import "base";
+@import "../bower_components/uikit/scss/uikit.scss";
+@import "../bower_components/uikit/scss/components/autocomplete.scss";
 
 // =================
 // LAYOUT RULES
