--- a/_themes/marx/partials/nav/_main_nav.html
+++ b/_themes/marx/partials/nav/_main_nav.html
@@ -1,3 +1,5 @@
+<div class=".uk-width-1-1">
+    
 <nav role="navigation" class="nav--primary">
   <div class="constrain">
     <ul class="nav__list nav__list--primary">
@@ -21,6 +23,9 @@
     </ul>
   </div><!-- END .constrain -->
 </nav>
+    
+</div>
+
 
 {{#
 ====================================
